# MKP

./: .gitignore  CMakeLists.txt  README.md  sla_stats.R  stats.R  stats.sh
data/: MA.data  MA_impr.data  MA_new.data  SA.data  SA_random.data  SA_random_new.data  SA_toyoda.data  local.data
data/rtd/: MA_1.data  MA_10.data  MA_100.data  SA_1.data  SA_10.data  SA_100.data
mkp_instances/: best_known_values.txt  best_known_values.txt_
src/: mkp.cpp  mkpio.cpp  mkpio.h  mkpproblem.cpp  mkpproblem.h  sla.cpp  solution.cpp  solution.h  util.cpp  util.h
